--- a/components/indoor_offline_tags_info.html
+++ b/components/indoor_offline_tags_info.html
@@ -44,7 +44,7 @@
                     <img src="img/icons/tags/offline_tag_24.png" class="md-avatar" alt="{{lang.offlineTags}}"
                          title="{{lang.offlineTags}}">
                     <div class="md-list-item-text" layout="column">
-                        <h3>Tags offline: <b class="color-darkgray">{{ offlineTagsIndoor.length }}</b></h3>
+                        <h3>{{lang.offlineTags}}: <b class="color-darkgray">{{ offlineTagsIndoor.length }}</b></h3>
                         <h4>{{ offlineTagsIndoor.length }} {{lang.areOfflineTags | lowercase}}</h4>
                         <md-select ng-if="offlineTagsIndoor.length > 0" ng-model="antani" placeholder="{{lang.offlineTags}}">
                             <md-option ng-value="tag" ng-disabled="$index + 1" ng-repeat="tag in offlineTagsIndoor">{{tag.name}}</md-option>
