MUPTIPLE ANCHOR POSITIONING
Implementato l'inserimento multiplo delle ancore.
Inserito il nome delle ancore invece che l'id sul canvas.
Inserita la posibilita' di anullare un disegno sul canvas

--- a/components/canvas.html
+++ b/components/canvas.html
@@ -65,8 +65,8 @@
                     </div>
                 </md-fab-actions>
             </md-fab-speed-dial>
-            <md-button ng-click="canvasCtrl.saveDrawing()" class="md-warn md-raised float-right">SALVA
-
+            <md-button ng-click="canvasCtrl.cancelDrawing()" class="md-warn md-raised float-right">ANULLA</md-button>
+            <md-button ng-click="canvasCtrl.saveDrawing()" class="md-warn md-raised float-right">SALVA</md-button>
         </div>
         <!--end draw buttoon-->
 
